refactor: split CLI interactions into its own project - Create a FormatAsTable method using reflection in the UserInteraction class to print objects as a table. - Implement the ListStrategy  class

--- a/expenseTracker.App/expenseTracker.App.csproj
+++ b/expenseTracker.App/expenseTracker.App.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\expenseTracker.DataAccess\expenseTracker.DataAccess.csproj" />
+    <ProjectReference Include="..\expenseTracker.CLI\expenseTracker.CLI.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
